Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -24,54 +24,10 @@
 \setlength{\parskip}{0.1mm}
 
 \begin{document}
-\title{\textbf{STAT 344 Term Project}}\\
+\title{\textbf{Sampling Term Project}}\\
 \date{November.13, 2020} 
 
-\author{
-\vspace{.4cm}
 
-{\textbf{Group Leader:}}\ Chen Chu \hspace{\fill}
-\textbf{Student Number:} 50093146  \\
-\vspace{.4cm}
-
-{\textbf{Name:}}\ Daisy Meng \hspace{\fill}
-\textbf{Student Number:} 80402985  \\
-\vspace{.4cm}
-
-{\textbf{Name:}}\ Angela Yang\hspace{\fill}
-\textbf{Student Number:} 24679383  \\
-\vspace{.4cm}
-
-{\textbf{Name:}}\ Charlie Chen \hspace{\fill}
-\textbf{Student Number:} 80958044  \\
-\vspace{.4cm}
-
-{\textbf{Name:}}\ Kathy Liu \hspace{\fill}
-\textbf{Student Number:} 78726890 \\
-\vspace{.4cm}\\
-
-\vspace{.1cm}
-{\textbf{Contribution:}} \\
-\vspace{.1cm}
-Chen Chu: \\
-Rcode Simulation, Graph Simulation, Appendix, Data Collection, Project Proofread, Conclusion \\
-\vspace{.1cm}\\
-
-Daisy Meng: \\
-Data Analysis(binary variable), Rcode ProofRead, Data Collection, Conclusion \\
-\vspace{.1cm}\\
-
-Angela Yang: \\
-Introduction, Rcode Simulation, Data Analysis(continuous variable), Data Collection, Conclusion \\
-\vspace{.1cm}\\
-
-Charlie Chen: \\
-Formula collection, Project/Document Compiling, Rcode Proofread , Data Collection, Conclusion\\
-\vspace{.1cm}\\
-
-Kathy Liu: Data Collection, Conclusion Proofread\\ 
-\vspace{.1cm}\\
-}
 
 \maketitle
 \newpage
